# decree

./: .gitignore  Cargo.toml  README.md
decree-derive/: Cargo.toml
decree-derive/src/: bitpattern.rs  bitsink.rs  bitsource.rs  common.rs  lib.rs
src/: error.rs  lib.rs
tests/: derive_bitsource.rs
